--- a/smoothing_and_classification_demo.ipynb
+++ b/smoothing_and_classification_demo.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "21de879d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Python/3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -33,9 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "['L7_T1C2L2_Grant_4Fields_2021-01-01_2022-01-01.csv',\n",
-       " 'Grant_4Fields.zip',\n",
-       " 'L8_T1C2L2_Grant_4Fields_2021-01-01_2022-01-01.csv']"
+       "['Grant_4Fields.zip']"
       ]
      },
      "execution_count": 2,
@@ -105,67 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1ba540c3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>NDVI</th>\n",
-       "      <th>EVI</th>\n",
-       "      <th>system_start_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>102309_WSDA_SF_2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>102385_WSDA_SF_2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    ID  NDVI  EVI  system_start_time\n",
-       "0  102309_WSDA_SF_2017   NaN  NaN                NaN\n",
-       "1  102385_WSDA_SF_2017   NaN  NaN                NaN"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "L7 = pd.read_csv(data_dir + \"L7_T1C2L2_Grant_4Fields_2021-01-01_2022-01-01.csv\")\n",
     "L8 = pd.read_csv(data_dir + \"L8_T1C2L2_Grant_4Fields_2021-01-01_2022-01-01.csv\")\n",
@@ -860,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
